--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)
+find_package(Qt5 REQUIRED COMPONENTS SerialPort)
 
 set(PROJECT_SOURCES
         main.cpp
@@ -50,4 +51,5 @@ else()
     endif()
 endif()
 
-target_link_libraries(Praktika_zadanie_1 PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(Praktika_zadanie_1 PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt5::SerialPort)
+
