--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)
 find_package(Qt5 REQUIRED COMPONENTS SerialPort)
+find_package(Qt5 REQUIRED COMPONENTS Core)
 
 set(PROJECT_SOURCES
         main.cpp
@@ -51,5 +52,5 @@ else()
     endif()
 endif()
 
-target_link_libraries(Praktika_zadanie_1 PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt5::SerialPort)
+target_link_libraries(Praktika_zadanie_1 PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt5::SerialPort Qt5::Core)
 
