--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)
 find_package(Qt5 REQUIRED COMPONENTS SerialPort)
 find_package(Qt5 REQUIRED COMPONENTS Core)
+find_package(Qt5 REQUIRED COMPONENTS Widgets)
 
 set(PROJECT_SOURCES
         main.cpp
@@ -56,4 +57,4 @@ else()
     endif()
 endif()
 
-target_link_libraries(Praktika_zadanie_1 PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt5::SerialPort Qt5::Core)
+target_link_libraries(Praktika_zadanie_1 PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt5::SerialPort Qt5::Core Qt5::Widgets)
